--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <header>
             <h2 class="logo">Illinois State University Solar Car Telemetry Data</h2>
             <nav class="navbar">
+                <a href="https://about.illinoisstate.edu/solarcar/" rel="nofollow">About us</a>
                 <button class="loginBtn-popup">Login</button>
             </nav>
         </header>
@@ -30,7 +31,7 @@
                             <ion-icon name="mail"></ion-icon>
                         </span>
                         <input id="userEmail" type="email" required>
-                        <label>Email</label>
+                        <label for="userEmail">Email</label>
                     </div>
 
                     <div class="input-box">
@@ -39,7 +40,7 @@
                             <ion-icon name="lock-closed"></ion-icon>
                         </span>
                         <input id="userPassword" type="password" required>
-                        <label>Password</label>
+                        <label for="userPassword">Password</label>
                     </div>
 
                     <div class="remember-password">
