--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <meta charset="UTF-8">
+        <meta charset="UTF-8"> 
         <meta http-equiv="refresh">
         <meta name="description" content="This website provides access to tools for gathering and viewing
         telemetry data received by the Illinois State University Solar Car.">
         <meta name="viewport" content="width=device-width", initial-scale=1>
-        <title>Temp</title>
+        <title>Solar Car Telemetry</title>
         <link rel="stylesheet" href="style.css">
+        <link rel="icon" href="Images/sun.ico">
     </head>
 
     <body>
@@ -20,17 +21,18 @@
         </header>
 
         <div class="wrapper">
+            <span class="close-icon">
+                <ion-icon name="close"></ion-icon>
+            </span>
+
             <div class="form-box login">
                 <h2>Login</h2>
-                <form action="#">
-                    <span class="close-icon">
-                        <ion-icon name="close"></ion-icon>
-                    </span>
+                <form action="login.php" method="post">
                     <div class="input-box">
                         <span class="icon">
                             <ion-icon name="mail"></ion-icon>
                         </span>
-                        <input id="userEmail" type="email" required>
+                        <input id="userEmail" type="email" name="email" required>
                         <label for="userEmail">Email</label>
                     </div>
 
@@ -39,7 +41,7 @@
                             <ion-icon name="eye" class="toggle-visible" onclick="toggleVisible()"></ion-icon>
                             <ion-icon name="lock-closed"></ion-icon>
                         </span>
-                        <input id="userPassword" type="password" required>
+                        <input id="userPassword" type="password" name="password" required>
                         <label for="userPassword">Password</label>
                     </div>
 
@@ -49,7 +51,41 @@
                         <a href="#">Forgot Password?</a>
                     </div>
 
-                    <button type="submit" class="btn" onclick="getUserInput()">Login</button>
+                    <p class="notify-incorrect">Incorrect Username or Password</p>
+                    
+                    <button type="submit" class="btn">Login</button>
+
+                    <div class="register-link">
+                        <p>Don't have an account? <a href="#">Register</a></p>
+                    </div>
+                </form>
+            </div>
+
+            <div class="form-box registration">
+                <h2>Registration</h2>
+                <form action="#" method="post">
+                    <div class="input-box">
+                        <span class="icon">
+                            <ion-icon name="mail"></ion-icon>
+                        </span>
+                        <input id="email" type="email" name="email" required>
+                        <label for="userEmail">Email</label>
+                    </div>
+
+                    <div class="input-box">
+                        <span class="icon">
+                            <ion-icon name="eye" class="toggle-visible" onclick="toggleVisible()"></ion-icon>
+                            <ion-icon name="lock-closed"></ion-icon>
+                        </span>
+                        <input id="password" type="password" name="password" required>
+                        <label for="userPassword">Password</label>
+                    </div>
+                    
+                    <button type="submit" class="btn">Register</button>
+
+                    <div class="login-link">
+                        <p>Already have an account? <a href="#">Login</a></p>
+                    </div>
                 </form>
             </div>
         </div>
