--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                             <ion-icon name="mail"></ion-icon>
                         </span>
                         <input id="email" type="email" name="email" required>
-                        <label for="userEmail">Email</label>
+                        <label for="email">Email</label>
                     </div>
 
                     <div class="input-box">
@@ -78,7 +78,7 @@
                             <ion-icon name="lock-closed"></ion-icon>
                         </span>
                         <input id="password" type="password" name="password" required>
-                        <label for="userPassword">Password</label>
+                        <label for="password">Password</label>
                     </div>
                     
                     <button type="submit" class="btn">Register</button>
